--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/RileyManda/webpack-demo/issues"
   },
-  "homepage": "https://github.com/RileyManda/webpack-demo#readme"
+  "homepage": "https://github.com/RileyManda/webpack-demo#readme",
+  "devDependencies": {
+    "webpack": "^5.86.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
